	PR ada/33788 	* fold-const.c (fold_unary) <VIEW_CONVERT_EXPR>: Fold an existing 	NOP_EXPR if it is between integral types with the same precision.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131493 138bc75d-0d04-0410-961f-82ee72b054a4